--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.5.1"
@@ -18,5 +19,6 @@
   "engines": {
     "node": "14.16.0",
     "npm": "6.14.11"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
