--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "heroku-postbuild": "npm install && npm run start"
+    "heroku-postbuild": "npm install"
   },
   "keywords": [],
   "author": "",
